@@ -293,3 +293,20 @@ s16b Rand_normal(int mean, int stand)
 }
 
 
+/**
+ * Generates damage for "2d6" style dice rolls
+ */
+int damroll(int num, int sides)
+{
+	int i;
+	int sum = num;
+
+	if (sides <= 0) return 0;
+
+	for (i = 0; i < num; i++)
+		sum += (rand_int(sides));
+	return sum;
+}
+
+
+
