@@ -63,3 +63,4 @@ Coding changes
 - Removed old sound interface. (A new one has not been added, since O
 has no sound files.)
 - Started cleanup of z-rand.
+- Moved damroll to z-rand.
